--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="CSS/style.css" />
     <script
       src="https://kit.fontawesome.com/c22bc638d0.js"
       crossorigin="anonymous"
@@ -54,11 +54,9 @@
             <p class="fw">
               Découvrez des restaurants d'exception, sélectionnés par nos soins
             </p>
-            <a href="#restaurants">
-              <div class="button">
-                <p>Explorer nos restaurants</p>
-              </div>
-            </a>
+            <button class="button">
+              <p>Explorer nos restaurants</p>
+            </button>
           </div>
         </form>
 
@@ -95,7 +93,7 @@
             <h2>Restaurants</h2>
             <div class="container-contenu-restaurants">
               <!-- Restaurant 1-->
-              <a href="la_palette.html">
+              <a href="restaurants-page/la_palette.html">
                 <article class="cardRestaurant">
                   <div class="newRestaurant"><p>Nouveau</p></div>
                   <img
@@ -118,7 +116,7 @@
               </a>
               <!-- Restaurant 2 -->
               <article class="cardRestaurant">
-                <a href="la_note_enchantée.html">
+                <a href="restaurants-page/la_note_enchantée.html">
                   <div class="newRestaurant"><p>Nouveau</p></div>
                   <img
                     src="ImagesettextesOhmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
@@ -140,7 +138,7 @@
               </article>
               <!-- Restaurant 3 -->
               <article class="cardRestaurant">
-                <a href="a_la_française.html">
+                <a href="restaurants-page/a_la_française.html">
                   <div class="newRestaurant"><p>Nouveau</p></div>
                   <img
                     src="ImagesettextesOhmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
@@ -162,7 +160,7 @@
               </article>
               <!-- Restaurant 4 -->
               <article class="cardRestaurant">
-                <a href="le_délice_des_sens.html">
+                <a href="restaurants-page/le_délice_des_sens.html">
                   <div class="newRestaurant"><p>Nouveau</p></div>
                   <img
                     src="ImagesettextesOhmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
