--- a/restaurants-page/le_délice_des_sens.html
+++ b/restaurants-page/le_délice_des_sens.html
@@ -248,9 +248,9 @@
             </fieldset>
           </div>
           <div class="commande">
-            <div class="button-2">
+            <button class="button-2">
               <p>Commander</p>
-            </div>
+            </button>
           </div>
         </section>
       </main>
