--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
             <p class="fw">
               Découvrez des restaurants d'exception, sélectionnés par nos soins
             </p>
-            <button class="button">
-              <p>Explorer nos restaurants</p>
-            </button>
+            <button class="button">Explorer nos restaurants</button>
           </div>
         </form>
 
@@ -65,25 +63,23 @@
         <section class="fonctionnement">
           <div class="fonctionnementcontainer">
             <h2>Fonctionnement</h2>
-            <a href="#restaurants">
-              <div class="fonctionnementdispo">
-                <div class="contour-etape">
-                  <span>1</span>
-                  <i class="couleur-i1 fa-solid fa-mobile-screen-button"></i>
-                  <h3>Choissisez un restaurant</h3>
-                </div>
-                <div class="contour-etape">
-                  <span>2</span>
-                  <i class="couleur-i1 fa-solid fa-list"></i>
-                  <h3>Composez votre menu</h3>
-                </div>
-                <div class="contour-etape">
-                  <span>3</span>
-                  <i class="couleur-i2 fa-solid fa-store"></i>
-                  <h3>Dégustez au restaurant</h3>
-                </div>
+            <div class="fonctionnementdispo">
+              <div class="contour-etape">
+                <span>1</span>
+                <i class="couleur-i1 fa-solid fa-mobile-screen-button"></i>
+                <h3>Choissisez un restaurant</h3>
               </div>
-            </a>
+              <div class="contour-etape">
+                <span>2</span>
+                <i class="couleur-i1 fa-solid fa-list"></i>
+                <h3>Composez votre menu</h3>
+              </div>
+              <div class="contour-etape">
+                <span>3</span>
+                <i class="couleur-i2 fa-solid fa-store"></i>
+                <h3>Dégustez au restaurant</h3>
+              </div>
+            </div>
           </div>
         </section>
 
