--- a/restaurants-page/la_note_enchantée.html
+++ b/restaurants-page/la_note_enchantée.html
@@ -268,9 +268,7 @@
             </fieldset>
           </div>
           <div class="commande">
-            <button class="button-2">
-              <p>Commander</p>
-            </button>
+            <button class="button-2">Commander</button>
           </div>
         </section>
       </main>
